fix cheesboard distortion

--- a/styles.css
+++ b/styles.css
@@ -90,8 +90,9 @@ p {
 }
 
 #cheeseboard {
-    height: 300px;
+    max-height: 300px;
     width: auto;
+    height: auto;
     border-radius: 200px;
     margin: 0 auto;
    }
@@ -411,8 +412,9 @@ a.cheese.active {
     }
 
     #cheeseboard{
-         height:150px;
+         max-height:150px;
          width:auto;
+         height: auto;
         
     }
 
